# ai-humanoid-robotics

./: .dockerignore  .env.example  .env.hf-template  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  SPECIFICATION.md  alembic.ini  app.py  chatkit_server.py  clear_frontend_cache.js  deployed-site-snapshot.md  docusaurus.config.ts  fix_async_client.py  fix_translation_endpoint.py  fix_user_id_issue.py  fix_user_model.py  main.py  migrate_user_id.py  oauth-headache.md  package-lock.json  package.json  pyproject.toml  reingest_book_with_correct_urls.py  requirements.txt  sidebars.ts  start_server.py  tailwind.config.js  temp_auth.tsx  test_chunking.py  test_onboarding.py  test_storage.py  tsconfig.json  validation-results.md
.claude/: settings.local.json
.claude/agents/: better-auth-specialist.md  openai-agents-sdk-specialist.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 001_add_personalization.py  002_add_onboarding_tables.py  005_add_openai_translation_tables.py
api/models/: ingestion.py
auth/: auth.py
backend/: .env.example  .env.hf  .env.hf-template  .gitignore  AUTHENTICATION_README.md  DATABASE_DEPLOYMENT_FIX.md  Dockerfile  Dockerfile.hf  NEON_SETUP.md  OAUTH_SETUP.md  OPENAI_AGENTS_FIX.md  RAG_ANALYSIS_REPORT.md  RAG_FIXES_SUMMARY.md  README.md  README_AUTH.md  README_HF_SPACES.md  UV_MIGRATION.md  alembic.ini  app.py  chatkit_server.py  check_db.py  clear_cache_simple.py  clear_translation_cache.py  create_translation_tables.py  fix_embeddings.py  fix_jsonb.py  init_database.py  main.py  migrate_user_id_fixed.py  migration_summary_translation_tables.md  pyproject.toml  requirements.txt  setup.md  start_server_hf.py  test_api_endpoint.py  test_chat.py  test_gemini.py  test_rag_status.py  test_storage.py  translation_result.json  (+1 more)
backend/alembic/: env.py
backend/api/: exceptions.py  index.py
backend/auth/: auth.py
backend/database/: auth.db  config.py
backend/docs/: api.md
backend/middleware/: auth.py  csrf.py
backend/models/: auth.py
backend/rag/: __init__.py  chat.py  chunking.py  context.py  embeddings.py  generation.py  models.py  qdrant_client.py  retrieval.py  tasks.py
backend/routes/: auth.py
backend/scripts/: clear_cache.py  deploy_hf.sh  generate-lock.sh  ingest.py  manage_migrations.py
backend/tests/: test_auth.py
docs/: algolia-docsearch-research.md  assessments.md  authentication-implementation-guide.md  chat-demo.md  chatgpt-style-chatbot-ui-guide.md  data_retention_policies.md  deployment.md  fastapi-auth-session-research.md  intro.md  performance-monitoring.md  re-render-behavior.md  sidebar.js
docs/lab-infrastructure/: budget-calculator.mdx
docs/module-1-foundation/: chapter-1-introduction.mdx  chapter-3-state-estimation.mdx  chapter-5-integration.mdx
docs/module-2-nervous-system/: chapter-8-launch-systems.mdx
docs/module-3-motion-control/: chapter-10-balance-locomotion.mdx  chapter-11-manipulation-grasping.mdx  chapter-9-kinematics-dynamics.mdx
docs/module-4-applications/: chapter-12-computer-vision.mdx  chapter-13-machine-learning.mdx
docs/module-5-advanced-humanoids/: chapter-16-bipedal-mechanics.mdx  chapter-17-advanced-locomotion.mdx  chapter-18-whole-body-control.mdx  chapter-19-case-studies.mdx
docs/part-1-foundations/: chapter-2-sensors-perception.mdx  chapter-4-motion-planning.mdx
docs/part-2-nervous-system/: chapter-6-ros2-architecture.mdx  chapter-7-ros2-nodes-python.mdx
docs/part-3-motion-control/: chapter-9-kinematics-dynamics.mdx
docs/part-4-applications/: chapter-12-computer-vision.mdx  chapter-14-human-robot-interaction.mdx  chapter-15-future-physical-ai.mdx
history/adr/: 2024-12-07-authentication-system.md
i18n/ur/: code.json
middleware/: auth.py
migrations/versions/: 001_create_openai_translation_tables.py
models/: auth.py
module_prompts/: 1-book-foundation.prompt.md  10-auth-ux-improvements.prompt.md  11-personalization.prompt.md  2-content-generation.prompt.md  3-rag-backend.prompt.md  4-chatbot-integration.prompt.md  5-bonus-features.prompt.md  6-deployment.prompt.md  7-advanced-chatbot-ui.prompt.md  8-advanced-ui-plan.prompt.md  9-better-auth-implementation.prompt.md
rag/: chat.py  chunking.py  ingestion.py  monitoring.py  retrieval.py  retrieval.py.old
routes/: auth.py
scripts/: deploy_hf.sh  generate-lock.ps1
specs/001-auth-ux-improvements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chatkit-integration/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-content-personalization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docusaurus-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-rerender/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-reader-features/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-urdu-translation-fix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-modify/: plan.md  quickstart.md  research.md
specs/002-deployment-setup/: plan.md  spec.md  tasks.md
specs/002-openai-translation/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-embedding-fix/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-robotics-textbook/: data-model.md  (+5 more)
src/: config.py
tests/: test_auth.py
(+475 files in other folders)
